nginx/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        readinessProbe: # Podの再起動をする
          periodSeconds: 60
          httpGet:
            path: /
            port: 80
        livenessProbe: # Podの再起動をする
          periodSeconds: 60
          httpGet:
            path: /
            port: 80
        resources:
          requests: # 特定のNodeにPodが配置されすぎることを防ぐ
            cpu: 200m
            memory: 100Mi
          limits: # PodがNodeのリソースを使いすぎることを防ぐ(memoryのみ)
            cpu: 200m
            memory: 100Mi
