nginx/nginx-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
